# yaduha-ovp

./: .gitignore  .gitmodules  Dockerfile  package-lock.json  package.json  pyproject.toml  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
scripts/: test_pipeline_translator.py
src/: index.ts
yaduha_ovp/: __init__.py  prompts.py  vocab.py
